Fix code overflow in build question

--- a/src/components/lessonPageTypes/BuildResponse.css
+++ b/src/components/lessonPageTypes/BuildResponse.css
@@ -56,3 +56,9 @@
   margin-top: 15px;
   margin-bottom: 10px;
 }
+
+.build-q-code {
+  width: 100%;
+  overflow: scroll;
+  white-space: nowrap;
+}
